--- a/package.json
+++ b/package.json
@@ -5,16 +5,28 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.38",
+    "apollo-boost": "^0.4.7",
+    "es6-promise": "^4.2.8",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-apollo": "^3.0.1",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-source-graphql": "^2.1.33",
+    "gatsby-source-wordpress": "^3.1.63",
+    "gatsby-theme-apollo": "^3.0.1",
     "gatsby-transformer-sharp": "^2.3.13",
+    "gatsby-wpgraphql-inline-images": "^0.2.5",
+    "graphql-tag": "^2.10.3",
+    "html-react-parser": "^0.10.1",
+    "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
   },
